# cninfo-wealthCrawler

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
DOCS/: PRD.MD
src/cninfo_ssgs/app/: cli.py
src/cninfo_ssgs/core/: crawler.py  extract_wealth_mgmt.py
src/cninfo_ssgs/data/: stock_list.py
src/cninfo_ssgs/integrations/: cninfo_api.py  http_client.py
src/cninfo_ssgs/llm/: llm_instructions_default.txt  llm_wealth_mgmt.py
src/cninfo_ssgs/parsing/: pdf_parser.py  table_utils.py
src/cninfo_ssgs/utils/: logging_utils.py
