[project]
name = "cninfo-ssgs"
version = "0.1.0"
description = "CNINFO 2025 理财公告采集与字段抽取"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31.0",
  "pdfplumber>=0.11.4",
  "tqdm>=4.66.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[project.scripts]
cninfo-ssgs = "cninfo_ssgs.app.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
